@@ -20,8 +20,9 @@
 #define ODCCM_CONSTANTS_H
 
 typedef enum {
-  ODCCM_DEVICE_PASSWORD_FLAG_SET     = 1,
-  ODCCM_DEVICE_PASSWORD_FLAG_PROVIDE = 2,
+  ODCCM_DEVICE_PASSWORD_FLAG_SET               = 1,
+  ODCCM_DEVICE_PASSWORD_FLAG_PROVIDE           = 2,
+  ODCCM_DEVICE_PASSWORD_FLAG_PROVIDE_ON_DEVICE = 4,
 } OdccmDevicePasswordFlags;
 
 #endif /* ODCCM_CONSTANTS_H */
